[DDW-161] - Fix theming issues on the wallet import overlays - Fixing left button - arrow button visibility

--- a/source/renderer/app/components/widgets/forms/InlineEditingSmallInput.scss
+++ b/source/renderer/app/components/widgets/forms/InlineEditingSmallInput.scss
@@ -122,5 +122,9 @@
 
   .leftButton {
     right: 48px;
+
+    &.withoutRightButton {
+      right: 0;
+    }
   }
 }
